Fix text overflow over sticky sidebar. (#110)

--- a/aip_site/support/scss/imports/sidebar.scss
+++ b/aip_site/support/scss/imports/sidebar.scss
@@ -12,6 +12,7 @@
 
   .docs-component-sidebar {
     -webkit-position: sticky;
+    background: #fff;
     display: block;
     float: right;
     position: sticky;
